--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   sleek_circular_slider: ^2.0.1
   defer_pointer: ^0.0.2
   flutter_blue_plus: ^1.33.4
+  mqtt_client: ^10.5.1
   
   
 
